Closed Bug 1658229 Opened 4 years ago Closed 4 years ago

Extension tabs should not appear in history ui

Categories

(Firefox :: Bookmarks & History, defect, P3)

78 Branch
All
Windows 10
defect
Points:
2

Tracking

()

VERIFIED FIXED
83 Branch
Iteration:
83.1 - Sept 21 - Oct 4
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 - wontfix
firefox79 --- wontfix
firefox80 --- wontfix
firefox81 --- wontfix
firefox82 --- wontfix
firefox83 --- verified

People

(Reporter: alice0775, Assigned: standard8)

References

Details

(Keywords: dataloss, nightly-community, regression)

Attachments

(1 file)

[Tracking Requested - why for this release]: Extension settings are unexpectedly initialized when doing "Forgot About This Site" on moz-extension://xxx

Reproducible: always

Steps To Reproduce:

  1. Install https://addons.mozilla.org/en-US/firefox/addon/gesturefy/

  2. Open about:addons > Extensions

  3. Click on … menu of the extension's tile and Choose "Options" so that the extensions option will open in tab

  4. Change any settings of the extensions and Close this tab

  5. Open Library (Ctrl+Shift+H) so that history libraly window will pop up.

  6. Right click on "moz-extension://***" and choose "Forgot About This Site"

  7. Open the extensions option again (Repeat step 3.)
    --- observe, all settings are default

Actual Results:
Extension settings are initialized.

Expected Results:
Should not. Extension settings are preserved

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=02f46362fdb0c35a8e4dd208f0de70827a75d1a1&tochange=bb7b37cfeea0f1597dc599af2148755eeca30420

Has Regression Range: --- → yes
Has STR: --- → yes

Tom is this expected?

Hi,

Thanks for reporting!

IIUC, in step 6, you removed the storage/persisted data for the extension. I don't understand why you think the extension setting should be preserved after step 6. Would you mind elaborating more on that?

Flags: needinfo?(ttung) → needinfo?(alice0775)

What is "This Site" in "Forgot About This Site" ?
Is "This site" and "This Extension" same? I thought "The Site" means "Website".

And "removed the storage/persisted data for the extension" is not all true.
For example, User Styles of Stylus extension are not removed even if execute "Forgot About This Site" on moz-extension://181ae023-c69a-475c-80b0-f6df227bda35/.
I'm very confused because some of the data in the extension will be removed and some will not.

I recommend
"Forgot About This Site" menu should be disabled(or hidden) on hitory item of "extension://xxx".

Flags: needinfo?(alice0775)
Summary: Extension settings are unexpectedly initialized when doing "Forgot About This Site" on moz-extension://xxx → Extension settings are unexpectedly initialized when doing "Forget About This Site" on moz-extension://xxx

(In reply to Alice0775 White from comment #3)
Thanks for clarifying!

What is "This Site" in "Forgot About This Site" ?
Is "This site" and "This Extension" same? I thought "The Site" means "Website".

I see where you are coming from, but it's probably I use the wrong words for describing this.

So, the site, in this case, refer to the setting page for "gesturefy" and it's "moz-extension://2f19ccb1-5761-8542-86f6-963cf51a29c2/views/options/html/index.html#Settings". And it uses indexedDB to store its settings, so the extension settings are initialized once you execute the "forget this site" for the URL.

However, I am not really sure if my understanding is correct so I defer this question to Johann.

And "removed the storage/persisted data for the extension" is not all true.
For example, User Styles of Stylus extension are not removed even if execute "Forgot About This Site" on moz-extension://181ae023-c69a-475c-80b0-f6df227bda35/.
I'm very confused because some of the data in the extension will be removed and some will not.

It can be an issue for Data Sanitization on "Styles of Stylus" and that would require someone to look into which API that "Styles of Stylus" uses to store the data. From the expectation of the implementation, it expects these storage types to be removed

I am pretty sure that the DOM storage for it has been removed once I execute "Forgot About This Site" on moz-extension://181ae023-c69a-475c-80b0-f6df227bda35/. (You can verify/observe that by checking if the directory in ${profile}/storage/default/moz-extension+++181ae023-c69a-475c-80b0-f6df227bda35 is removed after the execution)

I recommend
"Forgot About This Site" menu should be disabled(or hidden) on hitory item of "extension://xxx".

Johann, what do you think about this?

Flags: needinfo?(jhofmann)

It's not regressed by bug 1628240. Actually, bug 1628240 corrects the behavior for the operation on clearing DOM storage.

If we don't want to remove the setting for the extension on "Forget about this site", we can either filter out the moz-extension's URLs.

No longer regressed by: 1628240

I agree with Alice0775 that this behaviour is unexpected. At least I stumbled upon this as well and it took me a while to understand why one of my addon's prefereneces were reset.

Many users just want to use the Browser without actually looking up how to determine which extension is hiding behind an alpha-numeric string though.

Redirect needinfo requet to Tim

Flags: needinfo?(jhofmann) → needinfo?(tihuang)
See Also: → 1661534

Hey Shane, something web extensions related filed outside your components.

Flags: needinfo?(mixedpuppy)

moz-extension urls should not show up in history, same as about pages, etc. I don't see this as a data sanitisation bug, forget is working exactly as it should. It might be that we don't want to allow extension data to be removed, but that would be product decision on our end. I'll move the bug for triage.

Component: Data Sanitization → General
Flags: needinfo?(mixedpuppy)
Product: Toolkit → WebExtensions

I agree that we shouldn't treat extension pages as "Sites". So, disabling the "Forget About This Site" for moz-extension urls seems reasonable to me. But, I think what Shane mentioned in comment 9 is a better approach that we don't show moz-extension urls in history.

Flags: needinfo?(tihuang)

Per comment 9, we need to prevent moz-extension scheme from being added to history. That should also result in extension tabs not appearing in history UI, similar to about: tabs.

Component: General → Bookmarks & History
Product: WebExtensions → Firefox
Summary: Extension settings are unexpectedly initialized when doing "Forget About This Site" on moz-extension://xxx → Extension tabs should not appear in history ui
Assignee: nobody → standard8
Severity: -- → S3
Status: NEW → ASSIGNED
Iteration: --- → 83.1 - Sept 21 - Oct 4
Points: --- → 2
Priority: -- → P3
Pushed by mbanner@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/76f2bb2215b5 Exclude moz-extension:// urls from being saved in history. r=mak
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch

Since the status are different for nightly and release, what's the status for beta?
For more information, please visit auto_nag documentation.

Regressions: 1672259
QA Whiteboard: [qa-83b-p2]

Reproduced the initial issue using old Nightly build before the fix, verified that this is fixed now on Firefox 83.0b10 across platforms (windows 10 64bit, Ubuntu 18.04 and macOS 11.0) by not having moz-extension:// urls in history.

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-83b-p2]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: