Bug 1658229 - Exclude moz-extension:// urls from being saved in history. r=mak

Differential Revision: https://phabricator.services.mozilla.com/D91767